--- a/_dev/_ejs/_inc/_page-enterButton.ejs
+++ b/_dev/_ejs/_inc/_page-enterButton.ejs
@@ -4,4 +4,13 @@
 		$mailto = 'mailto:info@donatello.jp?subject=採用に関して｜サイトからのお問い合わせ&amp;body=【お名前】%0d%0a%0d%0a【ご連絡先】%0d%0aお電話： / メール：%0d%0a%0d%0a【ご連絡可能な時間帯】%0d%0a可能：○○時〜○○時 / 不可：○○時〜○○時%0d%0a%0d%0a【ご希望の就業形態】%0d%0a正社員%0d%0a%0d%0a【その他のお問い合わせ】%0d%0a';
 	}
 %>
-<a href="<%- $mailto %>" class="button -inquiry -toEnter"><button role="link" ><%- text %></button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a>
+<section>
+	<div>
+		<a href="<%- $mailto %>" class="button -inquiry -toEnter"><button role="link" ><%- text %></button><svg version="1.1" class="button_arrow" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="15px" height="2px" viewBox="0 0 15 2"><polyline fill="none" stroke="#FFF" stroke-miterlimit="10" points="0,2 15,2 13,0"/></svg></a>
+	</div>
+	<aside class="toEntry_attention">
+       メール画面が開きます。必要事項を記入してご送信下さいませ。<br>
+       メール画面が立ち上がらない場合は、お手数ですが<br><a href="<%- $mailto %>" class="textMailAddress">info@donatello.com</a>までメールで直接お問い合わせくださいませ。<br>
+       いただいた内容は厳重に管理し、3営業日以内に担当者よりご連絡いたします。
+    </aside>
+</section>
