--- a/_dev/_ejs/inquiry/index.ejs
+++ b/_dev/_ejs/inquiry/index.ejs
@@ -53,7 +53,7 @@ $meta.description = 'ディスクリプション';
                         「新規ビジネスにどうしてもシステム開発が必要…でも、発注先に困っている」<br>
                         「人手が足りなくて、開発スピードが遅い」<br>
                      「業務の効率化にこんなアイデアがある！けれど、エンジニアが社内にいない…」</p>
-                     <p>このメッセージをご覧の御社のような先進的なテクノロジーや、<br>あなたのイメージする、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
+                     <p>テクノロジーや、人々を豊かにするアイディア。<br>プロジェクトが動いている、また、新しいものが産まれる現場に、よくある事態です。</p>
                      <p>そんなとき、私たちが力になります。</p>
                      <p>10年以上のシステム開発経験を持つDonatelloが、<br>現場にイノベーションのキーを提供します。     
                      </p>
